@@ -4,7 +4,7 @@
 
 Estimated hours of work so far | Horas estimadas de trabajo hasta el momento:
 
-* **375 hours**
+* **378 hours**
 
 ##ENGLISH
 
@@ -25,6 +25,7 @@ Estimated hours of work so far | Horas estimadas de trabajo hasta el momento:
 ####(12/03/15)
 
 · Added Server > Install vsftpd (FTP) Server
+· Enhaced Games > Crispy-Doom
 
 ####(11/03/15)
 
