@@ -2,6 +2,7 @@
 ==========
 
 · Added Server > Install vsftpd (FTP) Server
+· Enhaced Games > Crispy-Doom
 
 (11/03/15)
 ==========
